# orflaedi

./: .flake8  .gitignore  .prettierrc  Dockerfile  Dockerfile.scrapy  Dockerfile.web  README.md  crontab  docker-compose.yml  main.py  migrate.py  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  requirements.txt  run_scrapers.py  scrape.sh  scrapinghub.yml  scrapy.cfg  setup.py  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/: app.css  app.js  app.ts  styles.css
orflaedi/: database.py  imgproxy.py  main.py  models.py  scrape.py
scrape/: pipelines.py  settings.py
scrape/deactivated/: husasmidjan.py  sensa.py  skidathjonustan.py
scrape/scrapling_spiders/: __init__.py  base.py  elko.py  ellingsen.py  ofsi.py
scrape/spiders/: berlin.py  bike.py  elko.py  ellingsen.py  everest.py  gap.py  gastec.py  hjolasprettur.py  husasmidjan.py  hvellur.py  kria.py  kuldi.py  markid.py  nova.py  nytjahjol.py  ofsi.py  orninn.py  peloton.py  rafmagnshjol.py  sensa.py  skidathjonustan.py  solifer.py  t2.py  thruman.py  tri.py
scripts/: build_data.py  classify.py
static/Default.hyperesources/: 37863A-restorable.plist  default_hype_generated_script.js
templates/: amp.html  base.html  ellingsen-ad.html  fathom.html  index.html  model.html
tests/: test_orflaedi.py
web/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.jsonc
web/src/: worker.js
web/src/data/: models.ts
web/src/layouts/: Base.astro
web/src/pages/: 404.astro  index.astro
web/src/pages/hjol/: [id].astro
web/src/styles/: global.css
