[tool.poetry]
name = "orflaedi"
version = "0.1.0"
description = ""
authors = ["Jokull Solberg <jokull@solberg.is>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.4"
imgix = "^3.1.1"
fastapi = {extras = ["all"], version = "^0.63.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.4.4"
scrapy = "^2.0.0"
ipdb = "^0.13.2"
flake8 = "^3.8.3"
migra = "^1.0.1597374790"
typer = "^0.3.2"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
