[tool.poetry]
name = "orflaedi"
version = "0.1.0"
description = ""
authors = ["Jokull Solberg <jokull@solberg.is>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.18"
psycopg2 = "^2.8.4"
imgix = "^3.1.1"
fastapi = "^0.75.0"
SQLAlchemy = {version = "^1.4.32", extras = ["asyncio"]}
asyncpg = "^0.23.0"
uvicorn = "^0.13.4"
python-dotenv = "^0.17.1"
aiofiles = "^0.7.0"
greenlet = "^1.1.2"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.4.4"
ipdb = "^0.13.2"
flake8 = "^3.8.3"
migra = "^1.0.1605230943"
sqlalchemy-stubs = "^0.3"
typer = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
